# weather

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_04_2116-7a2c885e5f35_create_cities_table.py  2025_07_04_2118-3d90e3ca13e5_create_cities_table.py  2025_07_04_2133-2a94e78ae39b_create_users_table.py  2025_07_05_0717-1eaf66bbd3e9_create_profile_table.py  2025_07_09_1607-899574578e2a_create_history_table.py  2025_07_09_2001-8b6aaeb90583_create_history_table.py
app/: exceptions.py  main.py  service.py  settings.py
app/actions/: __init__.py  utils.py
app/api_v1/: __init__.py
app/api_v1/cities/: __init__.py  crud.py  dependencies.py  handlers.py  repository.py  schemas.py  service.py  views.py
app/api_v1/histories/: __init__.py  crud.py  dependencies.py  handlers.py  repository.py  schemas.py  service.py  views.py
app/api_v1/users/: crud.py
app/api_v1/weatherapi/: handlers.py  schemas.py  service.py
app/clients/: __init__.py  city.py  history.py  weather.py
app/core/: dependencies.py  exceptions.py  gunicorn.conf.py  settings.py  testdb.sqlite3
app/infrastructure/: __init__.py  db_accessor.py
app/jinja/: filters.py  templates.py
app/lib/: data.py
app/models/: __init__.py  base.py  city.py  db_helper.py  history.py  profile.py  top_cities.py  user.py
app/templates/: base.htm  content.htm  layout.htm  not_found.htm
app/utils/: __init__.py  filters.py  templates.py  utils.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
(+32 files in other folders)
